--- a/style.css
+++ b/style.css
@@ -4,20 +4,23 @@ body{margin: 0;
 h1{
     font-size: 50px;
 }
+h2{
+    font: size 40px; ;
+}
 .orenge-color{
     color: orange;
 }
-section{
+.flexible-container{
     display: flex;
     margin-bottom: 150px;
 }
 .half-widht{
     width: 50%;
     padding-left: 5%;
-
+    
 }
 .half-widht{
-    width: 80%;
+    width:80%;
 }
 .link-button{
     text-decoration: none;
@@ -37,4 +40,28 @@ section{
     background-image: url(images/dream-bg.png);
     background-repeat: no-repeat;
     background-position: right;
+}
+.experience-area{
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+}
+.experience-item{
+    width: 100%;
+    box-shadow:10px 10px 40px rgb(105, 104, 104);
+    margin-left: 5px;
+    margin-right: 5px;
+    padding-left: 20px;
+    border-radius: 10px;
+
+}
+#FULL-STACK-DEVELOPER{
+    border-left: 7px solid tomato;
+}
+#BABY-WEB-DEVELOPER{
+
+    border-left: 7px solid blue
+}
+footer p{
+    text-align: center;
 }
