--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ h2{
     width:80%;
 }
 .link-button{
+    color: black;
     text-decoration: none;
     background-color: orange;
     padding: 10px 40px;
@@ -30,6 +31,13 @@ h2{
     background-image:linear-gradient(orange,tomato);
     font-weight: 700;
 }
+ a:hover{ background-color: rgb(247, 247, 140);
+    color: rgb(247, 247, 247);
+   
+
+    border: 1px solid rgb(2, 2, 2);
+}
+   
 .top-banner{
    background-image: url(images/top-banner.png);
   background-repeat: no-repeat;
@@ -46,13 +54,18 @@ h2{
     background-repeat: no-repeat;
     background-position: left;
 }
+.EXPERIENCES{
+    padding-left: 5%;
+    margin-bottom: 3%;
+}
 .experience-item{
-    width: 100%;
+    width: 40%;
     box-shadow:10px 10px 40px rgb(105, 104, 104);
-    margin-left: 5px;
-    margin-right: 5px;
+    margin-left: 150px;
+    margin-right: 150px;
     padding-left: 20px;
     border-radius: 10px;
+    padding-top: 5%;padding-bottom: 5%;
 
 }
 #FULL-STACK-DEVELOPER{
@@ -64,4 +77,10 @@ h2{
 }
 footer p{
     text-align: center;
+    border: 2px solid black;
+    padding-top: 25px;
+    padding-bottom: 25px;
+    background-color: black;
+    color: gray;
+    font-size: 20px;
 }
